--- a/conf/config.ini
+++ b/conf/config.ini
@@ -3,7 +3,7 @@ release = false
 
 [mysql]
 user = root
-password = 123456
-host = 127.0.0.1
+password = DaoSanJiao
+host = 8.130.73.191
 port = 3306
-db = byteGo
+db = bytego
